[package]
name = "simulate"
version = "0.1.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[dependencies]
lazy_static = "1.1.0"

nalgebra.workspace = true
ncollide3d.workspace = true

rlbot.workspace = true

common = { path = "../common" }
oven = { path = "../oven" }

[features]
strict = []
